First preso - with work needed on actual preso

--- a/episode1/index.html
+++ b/episode1/index.html
@@ -19,7 +19,7 @@
 <div class="slide">
   <h1>HTML5 Game Development</h1>
 </div>
-
+   
 <div class="slide">
   <h2> Episode 1: The basics</h2>
   <ul>
@@ -40,18 +40,9 @@
   <h1><img src="images/tardis.jpg"/></h1>
 </div>
 
-<div class="slide">
-  <h1>Future</h1>
-  <ul>
-    <li>Cheap</li>
-      <ul>
-        <li>Resources Online</li>
-        <li>No expensive debugger/computer/env. needed</li>
-      </ul>
-      <ul>
-        <li class="slide">"Simple" - comparitively speaking</li>
-      </ul>
-  <p class="slide">Slide 2</p>
+<div class="slide" id="boberoids_slide">
+  <h2>Demo</h2>
+  <canvas id="boberoids" width="800" height="600"/>
 </div>
 	
 <!-- Other extension HTML snippets go here, at the bottom of the deck container. -->
@@ -65,6 +56,8 @@
 <script src="scripts/jquery.min.js"></script>
 <script src="scripts/deck.core.js"></script>
 <script src="scripts/deck.goto.js"></script>
+<script src="scripts/underscore.js"></script>
+<script src="scripts/boberoids.js"></script>
 
 <!-- Initialize the deck. You can put this in an external file if desired. -->
 <script>
