--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset='utf-8'>
 
-  <title>paytonrules/HTML5-8LU @ GitHub</title>
+  <title>My 8th Light Universities</title>
 
   <style type="text/css">
     body {
@@ -20,7 +20,7 @@
     h1 .small { font-size: 0.4em; }
     h1 a { text-decoration: none }
     h2 { font-size: 1.5em; color: #713b9f; }
-    h3 { text-align: center; color: #713b9f; }
+    h3 { color: #713b9f; }
     a { color: #713b9f; }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
@@ -34,41 +34,31 @@
   <a href="http://github.com/paytonrules/HTML5-8LU"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 
   <div id="container">
-
-    <div class="download">
-      <a href="http://github.com/paytonrules/HTML5-8LU/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/paytonrules/HTML5-8LU/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
-    </div>
-
     <h1><a href="http://github.com/paytonrules/HTML5-8LU">HTML5-8LU</a>
       <span class="small">by <a href="http://github.com/paytonrules">paytonrules</a></span></h1>
 
     <div class="description">
-      My 8LU presentations
+      8th Light University - HTML5 Game Development
     </div>
 
-    <p>Stuff</p><h2>Authors</h2>
-<p>Eric Smith (eric@8thlight.com)<br/><br/>      </p>
-<h2>Contact</h2>
-<p>Eric Smith (eric@8thlight.com)<br/>      </p>
+    <h2>Lecture 1: - Introduction</h2>
+    <p>First things first, the slides are <a href="episode1/index.html">here.</a></p>
 
-
-    <h2>Download</h2>
+    <h3>Homework setup</h3>
     <p>
-      You can download this project in either
-      <a href="http://github.com/paytonrules/HTML5-8LU/zipball/master">zip</a> or
-      <a href="http://github.com/paytonrules/HTML5-8LU/tarball/master">tar</a> formats.
-    </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-      by running:
-      <pre>$ git clone git://github.com/paytonrules/HTML5-8LU</pre>
+      Fork The repo here, then issue a pull request when your changes are in.  All changes should be in boberoids.js.  Run the homework by opening the index.html file. 
     </p>
 
-    <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/paytonrules/HTML5-8LU">paytonrules/HTML5-8LU</a>
-    </div>
+    <h3>UX Homework:</h3>
+    <p>The "UX" homework is 'simple'.  Change the artwork in the images directory to not ...suck.  You may have to change some values for the image sizes in boberoids.js</p>
+
+    <h3>
+    
+
+
+    
+    <h2>Contact</h2>
+    <p>Eric Smith (eric@8thlight.com)</p>
 
   </div>
 
