Added back slides.  Should have the page ready

--- a/index.html
+++ b/index.html
@@ -34,30 +34,37 @@
   <a href="http://github.com/paytonrules/HTML5-8LU"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 
   <div id="container">
-    <h1><a href="http://github.com/paytonrules/HTML5-8LU">HTML5-8LU</a>
+    <h1><a href="http://github.com/paytonrules/HTML5-8LU">HTML5 Game Development</a>
       <span class="small">by <a href="http://github.com/paytonrules">paytonrules</a></span></h1>
-
-    <div class="description">
-      8th Light University - HTML5 Game Development
-    </div>
 
     <h2>Lecture 1: - Introduction</h2>
     <p>First things first, the slides are <a href="episode1/index.html">here.</a></p>
 
     <h3>Homework setup</h3>
     <p>
-      Fork The repo here, then issue a pull request when your changes are in.  All changes should be in boberoids.js.  Run the homework by opening the index.html file. 
+    Fork The repo <a href="http://github.com/paytonrules/Boberoids">here</a>, then issue a pull request when your changes are in.  All changes should be in boberoids.js.  Run the homework by opening the index.html file. 
     </p>
 
     <h3>UX Homework:</h3>
     <p>The "UX" homework is 'simple'.  Change the artwork in the images directory to not ...suck.  You may have to change some values for the image sizes in boberoids.js</p>
 
-    <h3>
-    
+    <h3>Apprentice Homework:</h3>
+    <p> The Apprentice Homework is decidedly not simple.  THe assignment is to take boberoids and refactor it to make it cleaner code.  You're allowed any resources you like, including asking me questions, although I'm not just gonna give you the answers Kevin.</p>
 
+    <h3>Everybody homework</h3>
+    <p>There are several features that are decidedly missing from the game.  Here is a non-extensive list:</p>
+    <ul>
+      <li class="slide">Keep Score</li>
+      <li class="slide">Fix Collision Dectection</li>
+      <li class="slide">Thrust</li>
+      <li class="slide">Hyperspace</li>
+    </ul>
+    <p>Make Features.  Make the game cool.  Go for it.</p>
 
+    <h3>Remember the Prize!</h3>
+    <img src="episode1/images/beer.jpg">
     
-    <h2>Contact</h2>
+    <h3>Contact</h3>
     <p>Eric Smith (eric@8thlight.com)</p>
 
   </div>
