Get boberoids onto the page.  Fix a couple typos Colin caught.

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
 
     <h3>Homework setup</h3>
     <p>
-    Fork The repo <a href="http://github.com/paytonrules/Boberoids">here</a>, then issue a pull request when your changes are in.  All changes should be in boberoids.js.  Run the homework by opening the index.html file. 
+    Fork the repo <a href="http://github.com/paytonrules/Boberoids">here</a>, then issue a pull request when your changes are in.  All changes should be in boberoids.js.  Run the homework by opening the index.html file. 
     </p>
 
     <h3>UX Homework:</h3>
     <p>The "UX" homework is 'simple'.  Change the artwork in the images directory to not ...suck.  You may have to change some values for the image sizes in boberoids.js</p>
 
     <h3>Apprentice Homework:</h3>
-    <p> The Apprentice Homework is decidedly not simple.  THe assignment is to take boberoids and refactor it to make it cleaner code.  You're allowed any resources you like, including asking me questions, although I'm not just gonna give you the answers Kevin.</p>
+    <p> The Apprentice Homework is decidedly not simple.  The assignment is to take boberoids and refactor it to make it cleaner code.  You're allowed any resources you like, including asking me questions, although I'm not just gonna give you the answers Kevin.</p>
 
     <h3>Everybody homework</h3>
     <p>There are several features that are decidedly missing from the game.  Here is a non-extensive list:</p>
