Minor change to index

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <span class="small">by <a href="http://github.com/paytonrules">paytonrules</a></span></h1>
 
     <h2>Lecture 1: - Introduction</h2>
-    <p>First things first, the slides are <a href="episode1/index.html">here.</a></p>
+    <p>First things first, the slides are <a href="episode1/index.html">here</a>  Note that due to some limitations in github pages, the demo will not show up.</p>
 
     <h3>Homework setup</h3>
     <p>
